@@ -13,11 +13,12 @@ import static java.nio.file.StandardOpenOption.CREATE;
 
 public class FSInvertedIndexPersister implements InvertedIndexPersister {
 
-    private static final String INDEX_HEADER = "id\tposition";
-    private static final String EVENTS_HEADER = "ts\tuuid\n";
+    private static final String INDEX_HEADER = "filename";
+    private static final String CONFIG_HEADER = "uuid\n";
+    private static final String EVENTS_HEADER = "ts\tuuid\tmodified\tcomment\n";
 
     @Override
-    public void persist(Map<String, String> invertedIndex) {
+    public void persistConfig(Map<String, String> invertedIndex) {
         for (String word : invertedIndex.keySet()) {
             if (word.length() <= 3) continue;
             Path path = Path.of("/appI/invertedIndexDatamart/index/" + word.charAt(0) + "/" + word.substring(0, 2)); // System.getenv("DATAMART") + "/invertedIndex/index/" + word.charAt(0) + "/" + word.substring(0, 2)
@@ -27,10 +28,17 @@ public class FSInvertedIndexPersister implements InvertedIndexPersister {
     }
 
     @Override
-    public void persist(String event) {
-        Path path = Path.of("/appI/invertedIndexDatamart/events"); // System.getenv("DATAMART") + "/invertedIndex/events"
+    public void persistConfig(String event) {
+        Path path = Path.of("/appI/invertedIndexDatamart"); // System.getenv("DATAMART") + "/invertedIndex/events"
         createDirectory(path);
-        write(Paths.get(path + "/indexed.log"), EVENTS_HEADER, event);
+        write(Paths.get(path + "/indexer.config"), CONFIG_HEADER, event);
+    }
+
+    @Override
+    public void persistDatalake(String event) {
+        Path path = Path.of("/app/datalake/events");
+        createDirectory(path);
+        write(Paths.get(path + "/updates.log"), EVENTS_HEADER, event);
     }
 
     private void createDirectory(Path path) {
